--- a/bootstraptry/specials.html
+++ b/bootstraptry/specials.html
@@ -29,7 +29,7 @@
                 <div class="navbar-brand">
                   <a href="index.html"><h1>Ravi Kannan's Cuisine</h1></a>
                    <p>
-                      <span>Kosher Certified</span>
+                      <span>Om Kali Jai Kali </span>
                    </p>
                 </div>
 
