--- a/bootstraptry/menu-categories.html
+++ b/bootstraptry/menu-categories.html
@@ -29,7 +29,7 @@
                 <div class="navbar-brand">
                   <a href="index.html"><h1>Ravi Kannan's Cuisine</h1></a>
                    <p>
-                      <span>Kosher Certified</span>
+                      <span>Om Kali Jai Kali</span>
                    </p>
                 </div>
 
@@ -81,7 +81,7 @@
 
               <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
     <div class="text-center">
-      Substituting white rice with brown rice or fried rice after 4:00pm will be $1.50 for a pint and $2.50 for a quart.
+      Substituting white rice with brown rice or fried rice after 4:00pm will be Rs.50 for a pint and Rs.25.50 for a quart.
     </div>
 
     <section class="row">
